Search bar JS/CSS

--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -74,7 +74,7 @@ iframe#oViewPane {
 	width: 100%;
 	height: 100%;
 	z-index: 0;
-	padding-top: 51px; /* 72 */
+	padding-bottom: 51px;
 }
 
 div#_md_blank.window_disable h1 {
@@ -224,4 +224,10 @@ div#_md_blank.window_disable h1 {
   margin-top: 10px;
   padding-left: 1em;
   z-index: 101;
+  position: relative;
+  font-size: 11pt;
+}
+
+.searchbox:focus {
+  border: 1em solid white;
 }
