--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
@@ -4,13 +4,13 @@
   #set($report = $sessionData.getReport())
 #end
 #set($filterString = $sessionData.getGlobalFilterString($report))
-<div id="navrow">
-  <div class="mini_action" style="border-bottom-right-radius: 0.5em;">
-    <button id="close_preview" onclick="closePreview();">close</button>
-  </div>
-  ###set($placeholder = $report.getReportName().replaceAll(" - .*",""))
-  ##<input id="searchbox" class="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
-</div>
+##<div id="navrow">
+##  <div class="mini_action" style="border-bottom-right-radius: 0.5em;">
+##    <button id="close_preview" onclick="closePreview();">close</button>
+##  </div>
+##  ###set($placeholder = $report.getReportName().replaceAll(" - .*",""))
+##  ##<input id="searchbox" class="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
+##</div>
 <div class="reportDataView" id="homeContent">
   #parse("gui/preview/report_content.vm")
 </div>
