Mark good matches in whole report searches

--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -60,9 +60,11 @@
           #set($style="")
           #set($class="")
           #if($colour && $colour !="") #set($style="background-color:$colour; ") #set($class="colored") #end
-					#if($cell.toLowerCase().startsWith($filterString))
-						#set($class = "$class goodMatch ")
-					#end
+					#if($cell)
+  					#if($cell.toLowerCase().startsWith($filterString))
+  						#set($class = "$class goodMatch ")
+  					#end
+			    #end
           #if($cell && (!$image) && ($cell != ""))
             #set($printoutSetting = $field.getPrintoutSetting())
             #if($fieldCategory == "CHECKBOX")
