Mark good matches in whole report searches

--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -60,7 +60,7 @@
           #set($style="")
           #set($class="")
           #if($colour && $colour !="") #set($style="background-color:$colour; ") #set($class="colored") #end
-					#if($cell)
+					#if($cell && $filterString) ## avoid NullPointerException
   					#if($cell.toLowerCase().startsWith($filterString))
   						#set($class = "$class goodMatch ")
   					#end
