--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -178,3 +178,11 @@
   box-shadow: 0 0 1em 1em white;
 }
 
+.imageCaption {
+  position: absolute;
+  bottom: 0;
+  height: 1em;
+  background-color: rgba(255,255,255,0.5);
+  font-size: 8pt;
+}
+
