--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -181,8 +181,11 @@
 .imageCaption {
   position: absolute;
   bottom: 0;
-  height: 1em;
+  left:0;
+  width: 100%;
+  height: 1.5em;
   background-color: rgba(255,255,255,0.5);
   font-size: 8pt;
+	text-shadow: white 0 0 1px;
 }
 
