--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -184,7 +184,8 @@
   left:0;
   width: 100%;
   height: 1.5em;
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.8);
+  padding-left: 0.5em;
   font-size: 8pt;
 	text-shadow: white 0 0 1px;
 	color: gray;
