Report search: img css

--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -26,7 +26,7 @@
   /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
   padding: 1em;
   border: solid 1px #b4b4b4;
-  border-radius: 10px;
+  border-radius: 1em;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
   -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
