--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
@@ -10,7 +10,11 @@
 ##  ###set($placeholder = $report.getReportName().replaceAll(" - .*",""))
 ##  ##<input id="searchbox" class="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
 ##</div>
-<span id="searchTitle">$report.getModule() - $report</span>
+#set($searchTitle = "$report.getModule() - $report")
+#if($searchTitle.length() > 20)
+	#set($searchTitle = "$report")
+#end
+<span id="searchTitle">$searchTitle</span>
 <div class="reportDataView" id="homeContent">
   #parse("gui/preview/report_content.vm")
 </div>
