--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -247,4 +247,5 @@ div#_md_blank.window_disable h1 {
   color: #f0f0f0;
   font-weight: bold;
   text-transform: lowercase;
+  box-shadow: 0 0 1em 1em #dbdbdb;
 }
