--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -248,4 +248,5 @@ div#_md_blank.window_disable h1 {
   font-weight: bold;
   text-transform: lowercase;
   box-shadow: 0 0 1em 1em #dbdbdb;
+  background-color: #dbdbdb;
 }
