--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -196,9 +196,9 @@
 
 .warningmessage {
 		border-radius: 1em;
-		border: 2px solid #ff0000;
+		border: 2px solid #DDE6EF;
 		text-align: center;
-		background: rgb(254,242,149);
+		background: #eef3f9;
 		margin: 10px;
 		padding: 10px;
 }
