Report search start

--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -194,7 +194,7 @@
 	border-bottom-right-radius: 1em;
 }
 
-.warningmessage {
+.infomessage {
 		border-radius: 1em;
 		border: 2px solid #DDE6EF;
 		text-align: center;
