--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -103,8 +103,10 @@
 		#set($reportName = $report.getReportName().toLowerCase())
 		#set($moduleName = $report.getModule().getModuleName())
 		#set($reportDescription = $report.getReportDescription().toLowerCase())
-		#if($reportName.contains($filterString) || $moduleName.contains($filterString) || $reportDescription.contains($filterString))
-			<li>$moduleName - $reportName <span style="color:gray">$reportDescription</span></li>
+		#if(!$reportName.contains("dbvcalc") && !$reportName.contains("dbvcrit"))
+  		#if($reportName.contains($filterString) || $moduleName.contains($filterString) || $reportDescription.contains($filterString))
+  			<li>$moduleName - $reportName <span style="color:gray">$reportDescription</span></li>
+			#end
 		#end
 	#end
 	</ul>
