Report search start

--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -101,7 +101,8 @@
 	#set($reports = $view.getAllViewableReports())
 	#foreach($report in $reports)
 		#set($reportName = $report.getReportName().toLowerCase())
-		#set($moduleName = $report.getModule().getModuleName())
+		#set($module = $report.getModule())
+		#set($moduleName = $module.getModuleName())
 		#set($reportDescription = $report.getReportDescription().toLowerCase())
 		#if(!$reportName.contains("dbvcalc") && !$reportName.contains("dbvcrit"))
   		#if($reportName.contains($filterString) || $moduleName.contains($filterString) || $reportDescription.contains($filterString))
