--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -106,7 +106,7 @@
 		#set($reportDescription = $report.getReportDescription().toLowerCase())
 		#if(!$reportName.contains("dbvcalc") && !$reportName.contains("dbvcrit"))
   		#if($reportName.contains($filterString) || $moduleName.contains($filterString) || $reportDescription.contains($filterString))
-  			<li><img style="vertical-align: middle;" src="resources/icons/applications/tango/$module.getIconPath()"/> $module.getIcon$moduleName - $reportName <span style="color:gray">$reportDescription</span></li>
+  			<li><img style="vertical-align: middle;" src="resources/icons/applications/tango/$module.getIconPath()"/> $moduleName - $reportName <span style="color:gray">$reportDescription</span></li>
 			#end
 		#end
 	#end
