Report search start

--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -96,7 +96,7 @@
 #end ## end of reportDataRows
 #if($reportDataRows.size() < 5)
 <div class="infomessage">
-	<h1>Reports in other areas that match</h1>
+	<h1>Reports from other areas</h1>
 	<ul>
 	#set($reports = $view.getAllViewableReports())
 	#foreach($report in $reports)
