--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -43,7 +43,9 @@
     #set($goToRowId = $thisUniqueId)
     ##onclick is workaround for iOS bug http://blog.alanszlosek.com/post/4369588562/jquerys-live-click-handler-on-mobile-safari
     <div class="related block current $ratio" data-rowid="$thisUniqueId" href="AppController.servlet?return=gui/display_application&set_table=$goToTable.getInternalTableName()&set_row_id=$goToRowId" onclick="fLoadFromPreview(this,event);"> 
-      #foreach($field in $reportBaseFields)##
+			#set($fieldNum = 0)
+			#set($details = false)
+			#foreach($field in $reportBaseFields)##
         #if(!$field.isPrimaryKey())
           #set($dataRowField = $dataRowFields.get($field))
           #set($cell = $dataRowField.getDisplayValue())
@@ -57,7 +59,7 @@
               #set($targetUrl = "/agileBase/uploads/$internalTableName/$field.getInternalFieldName()/$thisUniqueId/$fileValue")
               <a target = "_blank" href="AppController.servlet?return=gui/resources/image&set_custom_string=true&key=img_src&value=$targetUrl"><img src="$srcUrl" #if($field.getAttachmentType() == "PROFILE_PHOTO") class="profile_photo" #else class="image" #set($captionNecessary = true) #end/></a>
               #set($image = true)
-            #end
+						#end
           #end
           #set($style="")
           #set($class="")
@@ -68,6 +70,11 @@
   					#end
 			    #end
           #if($cell && (!$image) && ($cell != ""))
+						#set($fieldNum = $fieldNum + 1)
+						#if($fieldNum == 4)
+							#set($details = true)
+							<div class="details">
+						#end
             #set($printoutSetting = $field.getPrintoutSetting())
             #if($fieldCategory == "CHECKBOX")
               #if($cell == "true")
@@ -90,6 +97,7 @@
 				#if($captionNecessary)
 					<div class="imageCaption">$cellsHtml</div>
 				#end
+				#if($details) </div> #end
       #end ## end of block
     </div>
   #end
