--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -94,11 +94,11 @@
             #end
           #end
         #end ## end of not primary key
-				#if($details) </div> #end
-				#if($captionNecessary)
-					<div class="imageCaption">$cellsHtml</div>
-				#end
-      #end
+      #end ## end fields loop
+			#if($details) </div> #end
+			#if($captionNecessary)
+				<div class="imageCaption">$cellsHtml</div>
+			#end
     </div> ## end of block
   #end
 #end ## end of reportDataRows
