--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -119,8 +119,9 @@
 }
 
 .block .details {
-	font-size: 9pt;
+	font-size: 8pt;
 	background-color: #f0f0f0;
+	padding: 0.5em;
 }
 
 .slide.reportDataView .related {
