--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -59,7 +59,7 @@
               #set($srcUrl = $viewTools.escapeForUrl("/agileBase/uploads/$internalTableName/$field.getInternalFieldName()/$thisUniqueId/$fileValue.500.$fileValue.getExtension()"))
               <a target = "_blank" href="AppController.servlet?return=gui/resources/image&set_custom_string=true&key=img_src&value=$targetUrl"><img src="$srcUrl" #if($field.getAttachmentType() == "PROFILE_PHOTO") class="profile_photo" #else class="image" #set($captionNecessary = true) #end/></a>
               #set($image = true)
-						#elseif($cell.endsWith("pdf"))
+						#elseif($cell.endsWith("pdf") && !$captionNecessary)
 							#set($srcUrl = $viewTools.escapeForURL("$targetUrl.500.png"))
 							<img src="$srcUrl" class="image" />
 							#set($captionNecessary = true)
