--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -142,15 +142,44 @@
   height: 40px;
 }
 
+#doneSearch {
+  display: none;
+  margin-top: 9px;
+  font-size: 10pt;
+  position: relative;
+  z-index: 101;
+}
+
+#searchTitle {
+  position: fixed;
+  top: 0;
+  left: 1em;
+  font-size: 24pt;
+  color: #f0f0f0;
+  font-weight: bold;
+  text-transform: lowercase;
+  /* box-shadow: 0 0 1em 1em #dbdbdb; */
+  background-color: #dbdbdb;
+  padding: 1em;
+  padding-top: 0;
+}
+
 #searchbox {
-  margin-left: 2em;
-  margin-top: 0.5em;
+  border: 1px solid #cccccc;
+	margin-left: 2em;
+  margin-top: 9px;
 	width: 15em;
-	font-size: 13pt;
   text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 2em;
-  float: right;
+  float: left;
+  padding-left: 0.5em;
+  z-index: 101;
+  position: relative;
   /* no webkit border radius, webkit styles search inputs anyway */
+}
+
+#searchbox:focus {
+  box-shadow: 0 0 1em 1em white;
 }
 
 .report_including_content {
