Keyboard zoom for images

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
@@ -15,7 +15,7 @@ function zoom(zoomIn) {
   $("#image").css("width",zoomPercent + "%");
 }
 
-$("document").keypress(function(event) {
+$(document).keypress(function(event) {
   if(event.which == "-") {
 	  zoom(false);
 	} else if (event.which == "+") {
