Keyboard zoom for images: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
@@ -16,6 +16,7 @@ function zoom(zoomIn) {
 }
 
 $(document).keypress(function(event) {
+  alert("keypress");
   if(event.which == "-") {
 	  zoom(false);
 	} else if (event.which == "+") {
