Keyboard zoom for images: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
@@ -17,9 +17,9 @@ function zoom(zoomIn) {
 
 $(document).keypress(function(event) {
   alert("keypress: " + event.which);
-  if(event.which == "-") {
+  if(event.which == 45) {
 	  zoom(false);
-	} else if (event.which == "+") {
+	} else if (event.which == 43) {
 	  zoom(true);
 	}
 });
