--- a/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
@@ -16,10 +16,9 @@ function zoom(zoomIn) {
 }
 
 $(document).keypress(function(event) {
-  alert("keypress: " + event.which);
-  if(event.which == 45) {
+  if(event.which == 45) { // -
 	  zoom(false);
-	} else if (event.which == 43) {
+	} else if (event.which == 43) { // +
 	  zoom(true);
 	}
 });
