--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -74,7 +74,7 @@ iframe#oViewPane {
 	width: 100%;
 	height: 100%;
 	z-index: 0;
-	padding-bottom: 51px;
+	/* padding-bottom: 51px; */
 	position: absolute;
 	top: 51px;
 }
