--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -619,6 +619,7 @@ span.comment_attribution {
 .block.two_cols.non_section .fieldname {
   min-width: 10em;
   display: inline-block;
+  text-align: right;
 }
 
 div#reportData {
