Correct referenced report data content in tabs

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -32,7 +32,11 @@
     <div class="errormessage">Error: ID field for table $field.getTableContainingField() not found in referenced report $referencedReport</div>
 	#end
 	#if(!$rrd_rowId)
-	  #set($rrd_rowId = $sessionData.getRowId())
+	  #if($sessionRowId)
+		  #set($rrd_rowId = $sessionRowId)
+		#else
+	    #set($rrd_rowId = $sessionData.getRowId())
+		#end
 	#end
   #set($filter = $viewTools.getNewFilterMap())
   #set($success = $filter.put($primaryKey, "$rrd_rowId"))
