--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -102,15 +102,8 @@
   <body isDraft="true" style="background-color: white; overflow: visible"> ## err on the side of caution and mark as a draft by default.  This will be changed when the doc loads if it's not a draft
     <h1 class="draftMarker">DRAFT ONLY</h1>
     <h2 style="float:left;">$module - $report</h2>
-	<div style="float:right;">
-		<img src="/agileBase/website/images/logo-agilebase.png" />
-		<div style="float:right">
-		Snapshot at $viewTools.getDatestampString()<br>
-		For live data, login to<br>
-		www.agilebase.co.uk
-		</div>
-	</div>
-	<br clear="all">
+		<img src="resources/logo_small.png" style="vertical-align:middle" />agilebase.co.uk
+	  <br clear="all">
     <div id="wrapper"><table id=reportData cellspacing="0">
       #if($sessionReport.getReportStyle() == "SECTIONED")
         #parse("gui/pane2/sectioned_calcs.vm")
