--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -101,8 +101,8 @@
   </head>
   <body isDraft="true" style="background-color: white; overflow: visible"> ## err on the side of caution and mark as a draft by default.  This will be changed when the doc loads if it's not a draft
     <h1 class="draftMarker">DRAFT ONLY</h1>
-    <h2 style="float:left;">$module - $report</h2>
-		<img src="resources/logo_small.png" style="vertical-align:middle" />agilebase.co.uk
+    <h2 style="float:right;">$module - $report</h2>
+		<img src="resources/logo_small.png" style="vertical-align:middle; width:16px;" />&nbsp; agilebase.co.uk
 	  <br clear="all">
     <div id="wrapper"><table id=reportData cellspacing="0">
       #if($sessionReport.getReportStyle() == "SECTIONED")
