--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -41,7 +41,9 @@
     			  }
 				      
 				      h2 {
-				        padding:15px;
+							  padding: 0;
+								margin: 0;
+				        padding-right: 0.5em;
 				      }
 				      
 				      table#reportData {
