--- a/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/development/anonymise_company.vm
@@ -18,7 +18,7 @@
 ## Hard code values to anonymise a sample agileBase account
 
 ## Only allow anonymisation to be run on the test/backup server
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN">
+<!DOCTYPE html>
 <html>
 <head>
   <title>Anonymise data in an entire company</title>
