--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -16,7 +16,7 @@
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
 #set($unlockedRecords=false)
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
   <head>
 	<link href="styles/report.css" type="text/css" rel="stylesheet" />
