--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
@@ -21,7 +21,7 @@
 #else
   #set($module=$sessionData.getTable().getTableName())
 #end
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN">
+<!DOCTYPE html>
 <html>
   <head>
 	<link href="resources/modalFramework/modalFramework.css" type="text/css" rel="stylesheet" />
