--- a/gtpb_clientside/WEB-INF/templates/gui/load_tabs.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/load_tabs.vm
@@ -15,7 +15,7 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN">
+<!DOCTYPE html>
 ## Deal with any toolbar plugin
 #set($app_params = 'return=gui/display_application')
 ##TODO: remove, obsolete
