--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/record.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/record.vm
@@ -16,7 +16,7 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN">
+<!DOCTYPE html>
 <html>
   <head>
     <title>Record Details Printout</title>
