--- a/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_tab_set.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_tab_set.vm
@@ -15,7 +15,7 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN">
+<!DOCTYPE html>
 #set($table = $sessionData.getTable())
 <html>
   <head>
