Fix NPE in preview

--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -2,6 +2,9 @@
   #set($report = $sessionData.getReport())
 #end
 #set($filterString = $sessionData.getGlobalFilterString($report).toLowerCase())
+#if(!$filterString)
+	#set($filterString = "")
+#end
 #set($ratio = "landscape")
 #set($table = $report.getParentTable())
 #set($internalTableName = $table.getInternalTableName())
